--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,15 @@
             <artifactId>postgis-jdbc</artifactId>
             <version>1.3.3</version>
         </dependency>
+        
+        <!-- Biblioteca de componentes Primefaces -->
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>5.2</version>
+            <scope>compile</scope>
+        </dependency>
+       
 
     </dependencies>
 
